changed editor theme and color scheme

--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ response = raw_input()</pre>
 <script src="ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
     var editor = ace.edit("editor");
-    editor.setTheme("ace/theme/monokai");
+    editor.setTheme("ace/theme/solarized_dark");
     editor.getSession().setMode("ace/mode/java");
     editor.setOptions({fontSize: "1em"});
 </script>
