adding current node.js backend code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
 
 
 			<p>How to make a Minecraft Mod</p>
-
+            <button class="next" type="button" onclick="submitCode()">Submit Code</button>
 	</div>
 
 
