adding node files and sending code to server is working

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
 
 	<link rel="stylesheet" type="text/css" href="main.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-	<script src="script.js"></script>
+	
 
 </head>
 
@@ -313,7 +313,8 @@ As you can see, we refer to the entity many times in that line. we don’t want 
     editor.setOptions({fontSize: "1em"});
 </script>
 
-
+<script src="/socket.io/socket.io.js"></script>
+<script src="script.js"></script>
 
 </body>
 
