commiting finished code with static jar file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
 
 
 			<p>How to make a Minecraft Mod</p>
-            <button class="next" type="button" onclick="submitCode()">Submit Code</button>
+            
 	</div>
 
 
@@ -286,7 +286,7 @@ As you can see, we refer to the entity many times in that line. we don’t want 
 
             <div class = "dir">
 					<p class="step">You're Done!</p>
-					<button class="previous" type="button" onclick="step1()">Beginning</button>
+					<button class="next" type="button" onclick="window.location.href='/TrampolineMod-1.0.jar'">Submit Code</button>
                     <button class="previous" type="button" onclick="previous(11)">Prev.</button>
 					<br><br>
 				    Congratulations on finishing your first Minecraft Mod!
@@ -314,6 +314,7 @@ As you can see, we refer to the entity many times in that line. we don’t want 
 </script>
 
 <script src="/socket.io/socket.io.js"></script>
+<script src="/js/delivery.js"></script>
 <script src="script.js"></script>
 
 </body>
